<resources>
    <string name="app_name">Survey</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">User</string>
    <string name="nav_profile_res">My Profile</string>
    <string name="nav_index_survey">Index Survey</string>
    <string name="nav_add_survey">Add Survey</string>
    <string name="nav_report_survey">Report Survey</string>
    <string name="nav_history_survey">History Survey</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Index Survey</item>
        <item>Add Survey</item>
        <item>Report Survey</item>
        <item>History Survey</item>
    </string-array>

    <string-array name="nav_item_activity_titles_responden">
        <item>Home</item>
        <item>Profile</item>
        <item>Index Survey</item>
        <item>History Survey</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="search_hint">Search Survey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string-array name="question_types">
        <item>Multiple Choice</item>
        <item>CheckList</item>
        <item>Esay</item>
    </string-array>


</resources>
