<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_36dp"
            android:title="@string/nav_profile_res" />
        <item
            android:id="@+id/nav_index_survey"
            android:icon="@drawable/ic_list_black_36dp"
            android:title="@string/nav_index_survey" />

        <item
            android:id="@+id/nav_history_survey"
            android:icon="@drawable/ic_note_add_black_36dp"
            android:title="@string/nav_history_survey" />
    </group>

</menu>
