<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp" >

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/username"
            android:drawableLeft="@drawable/ic_person_white_36dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_input_text"
            android:hint="@string/hint_username"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/password"
            android:drawableLeft="@drawable/ic_lock_white_36dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/selector_button"
            android:text="@string/action_login"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>